--- a/Client/src/assets/styling/abstracts/_colors.scss
+++ b/Client/src/assets/styling/abstracts/_colors.scss
@@ -1,12 +1,14 @@
 $text-main: #D9D9D9;
 $text-secondary: #090909;
 $text-third: #3E3E3E;
+$text-disabled: #9e9e9e;
 
 $el-white-main: #D9D9D9;
 $el-active-blue: #0D3FF1;
 $el-active-blue-hover: #120DF1;
 $el-error-red: #F10D0D;
-$el-inactive-blue: #4C70F0;
+$el-warning-orange: #f1550d;
+$el-inactive-blue: #4c505f;
 $el-inactive-gray: #3E3E3E;
 $el-border-gray: #232323;
 $el-border-gray-focus: #161616;
