--- a/Client/src/assets/styling/abstracts/_colors.scss
+++ b/Client/src/assets/styling/abstracts/_colors.scss
@@ -8,7 +8,7 @@ $el-active-blue: #0D3FF1;
 $el-active-blue-hover: #120DF1;
 $el-error-red: #F10D0D;
 $el-warning-orange: #f1550d;
-$el-inactive-blue: #4c505f;
+$el-inactive-blue: #414142;
 $el-inactive-gray: #3E3E3E;
 $el-border-gray: #232323;
 $el-border-gray-focus: #161616;
