--- a/Client/src/assets/styling/components/_registerDialog.scss
+++ b/Client/src/assets/styling/components/_registerDialog.scss
@@ -77,6 +77,35 @@
                 font-family: map-get($font-text-light, font-family);
                 font-weight: map-get($font-text-light, font-weight);
             }
+
+            .desktop-register-form-select {
+                position: relative;
+                transition: all 0.2s ease-in-out;
+                margin: 5px 0 10px 0;
+                max-width: 100%;
+                height: 42px;
+                background-color: $el-bg-gray;
+                color: $text-main;
+                border: 2px solid $el-border-gray;
+                padding: 10px;
+                border-radius: 10px;
+                z-index: 1;
+    
+                &:focus {
+                    transition: all 0.2s ease-in-out;
+                    outline: none;
+                    border: 2px solid transparent;
+                    border-radius: 10px;
+                    background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus), 
+                    linear-gradient(
+                        to bottom,
+                        rgb(13, 63, 241),
+                        rgb(13, 63, 241, 0.2)
+                      );
+                    background-origin: border-box;
+                    background-clip: padding-box, border-box;
+                }
+            }
         
             input {
                 position: relative;
@@ -130,10 +159,51 @@
                         );
                 }
             }
+
+            .input-password-weak {
+                transition: all 0.2s ease-in-out;
+                outline: none;
+                border: 2px solid transparent;
+                border-radius: 10px;
+                background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus), 
+                linear-gradient(
+                    to bottom,
+                    rgb(241, 85, 13),
+                    rgb(241, 85, 13, 0.2)
+                  );
+                background-origin: border-box;
+                background-clip: padding-box, border-box;
+        
+                &:focus {
+                    background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus), 
+                    linear-gradient(
+                        to bottom,
+                        rgb(241, 85, 13),
+                        rgb(241, 85, 13, 0.2)
+                      );
+                }
+            }
+    
+            .warning-text {
+                color: $el-warning-orange;
+            }
         
             p {
                 color: $el-error-red;
                 margin-bottom: 20px;
+            }
+
+            .register-desktop-button-disable {
+                transition: all 0.2s ease-in-out;
+                background-color: $el-inactive-blue;
+                border: none;
+                color: $text-disabled;
+                font-family: map-get($font-title-bold, font-family);
+                font-weight: map-get($font-title-bold, font-weight);
+                height: 42px;
+                border-radius: 50px;
+                margin-top: 29px;
+                width: 100%;
             }
         
             .desktop-register-btn {
@@ -167,9 +237,21 @@
             padding: 33px 32px;
         
             .router-link-text, p {
+                background: transparent;
+                border: none;
+                font-size: 1rem;
                 color: $text-main;
                 font-family: map-get($font-text-light, font-family);
                 font-weight: map-get($font-text-light, font-weight);
+            }
+
+            .router-link-text {
+                text-decoration: underline;
+
+                &:hover {
+                    cursor: pointer;
+                    color: $el-active-blue;
+                }
             }
         }
     }
