--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -9,5 +9,6 @@
 @import './components/registerDialog';
 @import './components/signInFormTablet';
 @import './components/signInDialog';
+@import './components/userHome';
 @import './components/dialog';
-@import './components/blueLine'
+@import './components/blueLine';
