[Added] new validation to the form since the old one required that the inputs were filled in the correct order

--- a/Client/src/assets/styling/base.scss
+++ b/Client/src/assets/styling/base.scss
@@ -47,3 +47,7 @@ h3 {
   font-family: map-get($font-title-black, font-family);
   font-weight: map-get($font-title-black, font-weight);
 }
+
+.hidden {
+  display: none;
+}
