--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -10,5 +10,7 @@
 @import './components/signInFormTablet';
 @import './components/signInDialog';
 @import './components/userHome';
+@import './components/repairShopForm';
+
 @import './components/dialog';
 @import './components/blueLine';
