[Changed] validation [Fixed] a few errors

--- a/Client/src/assets/styling/base.scss
+++ b/Client/src/assets/styling/base.scss
@@ -51,3 +51,9 @@ h3 {
 .hidden {
   display: none;
 }
+
+.form-mobile-checkbox {
+  background-color: aqua;
+  background: transparent;
+  border: 2px solid red;
+}
