--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -7,6 +7,7 @@
 @import './components/registerFormMobile';
 @import './components/registerFormTablet';
 @import './components/registerDialog';
+@import './components/signInFormMobile';
 @import './components/signInFormTablet';
 @import './components/signInDialog';
 @import './components/userHome';
