--- a/Client/src/assets/styling/components/_signInFormMobile.scss
+++ b/Client/src/assets/styling/components/_signInFormMobile.scss
@@ -29,7 +29,7 @@
     }
   }
 
-  .mobile-register-form {
+  .mobile-sign-in-form {
     margin-top: 50px;
     display: flex;
     flex-direction: column;
@@ -41,31 +41,6 @@
     }
 
     input {
-      position: relative;
-      transition: all 0.2s ease-in-out;
-      margin: 10px 0 20px 0;
-      width: calc(100vw - 32px);
-      height: 42px;
-      background-color: $el-bg-gray;
-      color: $text-main;
-      border: 2px solid $el-border-gray;
-      padding: 10px;
-      border-radius: 10px;
-      z-index: 1;
-
-      &:focus {
-        transition: all 0.2s ease-in-out;
-        outline: none;
-        border: 2px solid transparent;
-        border-radius: 10px;
-        background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
-          linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
-        background-origin: border-box;
-        background-clip: padding-box, border-box;
-      }
-    }
-
-    .mobile-register-form-select {
       position: relative;
       transition: all 0.2s ease-in-out;
       margin: 10px 0 20px 0;
@@ -106,33 +81,38 @@
       }
     }
 
-    .input-password-weak {
-      transition: all 0.2s ease-in-out;
-      outline: none;
-      border: 2px solid transparent;
-      border-radius: 10px;
-      background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
-        linear-gradient(to bottom, rgb(241, 85, 13), rgb(241, 85, 13, 0.2));
-      background-origin: border-box;
-      background-clip: padding-box, border-box;
-
-      &:focus {
-        background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
-          linear-gradient(to bottom, rgb(241, 85, 13), rgb(241, 85, 13, 0.2));
-      }
-    }
-
-    .warning-text {
-      color: $el-warning-orange;
-    }
-
     p {
       color: $el-error-red;
       margin-bottom: 20px;
       margin-top: -10px;
     }
 
-    .register-mobile-button-disable {
+    .mobile-sign-in-form-select {
+      position: relative;
+      transition: all 0.2s ease-in-out;
+      margin: 10px 0 20px 0;
+      width: calc(100vw - 32px);
+      height: 42px;
+      background-color: $el-bg-gray;
+      color: $text-main;
+      border: 2px solid $el-border-gray;
+      padding: 10px;
+      border-radius: 10px;
+      z-index: 1;
+
+      &:focus {
+        transition: all 0.2s ease-in-out;
+        outline: none;
+        border: 2px solid transparent;
+        border-radius: 10px;
+        background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
+          linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
+        background-origin: border-box;
+        background-clip: padding-box, border-box;
+      }
+    }
+
+    .sign-in-mobile-button-disable {
       transition: all 0.2s ease-in-out;
       background-color: $el-inactive-blue;
       border: none;
@@ -144,7 +124,7 @@
       margin: 10px 0 32px 0;
     }
 
-    .register-mobile-button {
+    .sign-in-mobile-button {
       transition: all 0.2s ease-in-out;
       background-color: $el-active-blue;
       border: none;
@@ -160,21 +140,6 @@
         cursor: pointer;
         background-color: $el-active-blue-hover;
       }
-    }
-  }
-
-  .text-form-container {
-    padding: 32px 0;
-
-    .router-link-text,
-    p {
-      color: $text-main;
-      font-family: map-get($font-text-light, font-family);
-      font-weight: map-get($font-text-light, font-weight);
-    }
-
-    p {
-      margin-bottom: 10px;
     }
   }
 }
