--- a/Client/src/assets/styling/components/_repairShopHomeForm.scss
+++ b/Client/src/assets/styling/components/_repairShopHomeForm.scss
@@ -11,7 +11,7 @@ form {
     background-color: $el-bg-gray;
     color: $text-main;
     border: 2px solid $el-border-gray;
-    padding: 10px;
+    padding: 8px;
     border-radius: 10px;
     z-index: 1;
     display: flex;
@@ -45,6 +45,10 @@ form {
     font-size: 0.9rem;
   }
 
+  hr {
+    margin: 8px 0;
+  }
+
   span {
     color: $text-main;
     font-family: map-get($font-title-bold, font-family);
@@ -56,11 +60,10 @@ form {
     transition: all 0.2s ease-in-out;
     margin: 5px 0 10px 0;
     width: 100%;
-    height: 42px;
+    height: auto;
     background-color: $el-bg-gray;
     color: $text-main;
     border: 2px solid $el-border-gray;
-    padding: 10px;
     border-radius: 10px;
     z-index: 1;
     display: flex;
@@ -80,11 +83,44 @@ form {
       height: 42px;
       width: 100%;
       text-align: right;
-      padding: 10px;
 
       &:hover {
         cursor: pointer;
         color: $el-active-blue;
+      }
+    }
+
+    .top-nav-extended {
+      padding: 8px;
+    }
+
+    .message-content {
+      padding: 8px;
+    }
+
+    label {
+      padding: 8px;
+    }
+
+    .answer-label {
+      color: $text-third;
+    }
+
+    .text-editor-answer {
+      width: 100%;
+      height: 300px;
+      padding: 8px;
+      margin-top: 8px;
+      color: $text-main;
+      border: none;
+      background: transparent;
+      resize: none;
+      font-size: 0.9rem;
+      font-family: map-get($font-text-light, font-family);
+      font-weight: map-get($font-text-light, font-weight);
+
+      &:focus {
+        outline: none;
       }
     }
   }
