[Added] services, models and a route so that the repair shops can answer the customer

--- a/Client/src/assets/styling/components/_repairShopHomeForm.scss
+++ b/Client/src/assets/styling/components/_repairShopHomeForm.scss
@@ -2,6 +2,10 @@
 @use '../abstracts/fonts' as *;
 
 form {
+  .customer-name {
+    color: $text-main;
+  }
+
   .repair-shop-form-text-container {
     position: relative;
     transition: all 0.2s ease-in-out;
