--- a/Client/src/assets/styling/components/_consumerFooter.scss
+++ b/Client/src/assets/styling/components/_consumerFooter.scss
@@ -2,43 +2,46 @@
 @use '../abstracts/fonts' as *;
 
 footer {
-    padding: 54px 16px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  padding: 54px 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 
-    .footer-text-container {
-
-        h2 {
-            color: $text-main;
-            font-family: map-get($font-title-bold, font-family);
-            font-weight: map-get($font-title-bold, font-weight);
-        }
-
-        .router-link {
-            margin-left: 1px;
-        }
-
-        a, p {
-            color: $text-main;
-            font-family: map-get($font-text-light, font-family);
-            font-weight: map-get($font-text-light, font-weight);
-        }
-
-        p {
-            margin-left: 1px;
-        }
+  .footer-text-container {
+    h2 {
+      font-size: 1.4rem;
+      color: $text-main;
+      font-family: map-get($font-title-bold, font-family);
+      font-weight: map-get($font-title-bold, font-weight);
     }
+
+    .router-link {
+      font-size: 0.9rem;
+      margin-left: 1px;
+    }
+
+    a,
+    p {
+      font-size: 0.9rem;
+      color: $text-main;
+      font-family: map-get($font-text-light, font-family);
+      font-weight: map-get($font-text-light, font-weight);
+    }
+
+    p {
+      margin-left: 1px;
+    }
+  }
 }
 
 @media screen and (min-width: 700px) {
-    footer {
-        padding: 60px 32px;
-    }
+  footer {
+    padding: 60px 32px;
+  }
 }
 
 @media screen and (min-width: 1482px) {
-    footer {
-        padding: 70px 64px;
-    }
+  footer {
+    padding: 70px 64px;
+  }
 }
