--- a/Client/src/assets/styling/components/_consumerHeader.scss
+++ b/Client/src/assets/styling/components/_consumerHeader.scss
@@ -2,194 +2,196 @@
 @use '../abstracts/fonts' as *;
 
 header {
-    position: relative;
+  position: relative;
 
-    img {
-        min-width: 100%;
-        height: 100vw;
-        max-height: 350px;
-        object-fit: cover;
-    }
+  img {
+    min-width: 100%;
+    height: 100vw;
+    max-height: 350px;
+    object-fit: cover;
+  }
 
-    .header-parent-container {
-        width: 100vw;
-        height: 100vw;
-        max-height: 350px;
-        position: absolute;
-        z-index: 1;
-        top: 0;
+  .header-parent-container {
+    width: 100vw;
+    height: 100vw;
+    max-height: 350px;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    display: flex;
+    align-items: end;
+    padding: 16px;
+
+    .register-tab {
+      width: 190px;
+      display: flex;
+      flex-direction: column;
+      z-index: 1;
+
+      h2 {
+        font-size: 1.4rem;
+        color: $text-main;
+        font-family: map-get($font-title-black, font-family);
+        font-weight: map-get($font-title-black, font-weight);
+        margin-bottom: 8px;
+
+        span {
+          background: linear-gradient(to right, #0d3ff1, #0d31f1);
+          -webkit-background-clip: text;
+          color: transparent;
+          display: inline-block;
+        }
+      }
+
+      p {
+        font-size: 0.9rem;
+        color: $text-main;
+        font-family: map-get($font-text-light, font-family);
+        font-weight: map-get($font-text-light, font-weight);
+      }
+
+      input {
+        transition: all 0.2s ease-in-out;
+        margin-bottom: 16px;
+        padding: 8px;
+        border: 2px solid $el-white-main;
+        border-radius: 10px;
+        height: 35px;
+        background: transparent;
+        color: $text-main;
+        font-size: 0.9rem;
+        margin-top: 4px;
+
+        &:focus {
+          transition: all 0.2s ease-in-out;
+          border: 2px solid $el-active-blue;
+          outline: none;
+        }
+      }
+
+      .header-register-link {
+        transition: all 0.2s ease-in-out;
+        background-color: $el-active-blue;
+        border: none;
+        color: $text-main;
+        font-family: map-get($font-title-bold, font-family);
+        font-weight: map-get($font-title-bold, font-weight);
+        height: 35px;
+        border-radius: 50px;
+        max-width: 100%;
         display: flex;
-        align-items: end;
-        padding: 16px;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        font-size: 0.9rem;
 
-        .register-tab {
-            width: 190px;
-            display: flex;
-            flex-direction: column;
-            z-index:1;
-
-            h2 {
-                color: $text-main;
-                font-family: map-get($font-title-black, font-family);
-                font-weight: map-get($font-title-black, font-weight);
-                margin-bottom: 8px;
-
-                span {
-                    background: linear-gradient(to right, #0D3FF1, #0D31F1);
-                    -webkit-background-clip: text;
-                    color: transparent;
-                    display: inline-block;
-                }
-            }
-
-            p {
-                color: $text-main;
-                font-family: map-get($font-text-light, font-family);
-                font-weight: map-get($font-text-light, font-weight);
-            }
-
-            input {
-                transition: all 0.2s ease-in-out;
-                margin-bottom: 16px;
-                padding: 10px;
-                border: 2px solid $el-white-main;
-                border-radius: 10px;
-                height: 35px;
-                background: transparent;
-                color: $text-main;
-                margin-top: 4px;
-
-                &:focus {
-                    transition: all 0.2s ease-in-out;
-                    border: 2px solid $el-active-blue;
-                    outline: none;
-                }
-            }
-
-            .header-register-link {
-                transition: all 0.2s ease-in-out;
-                background-color: $el-active-blue;
-                border: none;
-                color: $text-main;
-                font-family: map-get($font-title-bold, font-family);
-                font-weight: map-get($font-title-bold, font-weight);
-                height: 35px;
-                border-radius: 50px;
-                max-width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                text-decoration: none;
-
-                &:hover {
-                    transition: all 0.2s ease-in-out;
-                    cursor: pointer;
-                    background-color: $el-active-blue-hover;
-                }
-            }
+        &:hover {
+          transition: all 0.2s ease-in-out;
+          cursor: pointer;
+          background-color: $el-active-blue-hover;
         }
-
-        .fade-container {
-            left: 0;
-            bottom: 0;
-            position: absolute;
-            width: 100vw;
-            height: 100px;
-            background: linear-gradient(182deg, rgba(9, 9, 9, 0.00) 20.95%, #090909 98.41%);
-        }
+      }
     }
+
+    .fade-container {
+      left: 0;
+      bottom: 0;
+      position: absolute;
+      width: 100vw;
+      height: 100px;
+      background: linear-gradient(182deg, rgba(9, 9, 9, 0) 20.95%, #090909 98.41%);
+    }
+  }
 }
 
 @media screen and (min-width: 700px) {
-    header {
-    
-        img {
-            max-height: 400px;
-        }
-    
-        .header-parent-container {
-            max-height: 400px;
-            padding: 32px;
-    
-            .register-tab {
-                width: 200px;
-    
-                h2 {
-                    font-size: 1.5rem;
-                }
-    
-                p {
-                    font-size: 1rem;
-                }
-    
-                input {
-                    height: 37px;
-                    font-size: 0.9rem;
-                }
-    
-                button {
-                    font-size: 0.9rem;
-                    height: 37px;
-                }
-            }
-    
-            .fade-container {
-                left: 0;
-                bottom: 0;
-                position: absolute;
-                width: 100vw;
-                height: 100px;
-                background: linear-gradient(182deg, rgba(9, 9, 9, 0.00) 20.95%, #090909 98.41%);
-            }
-        }
+  header {
+    img {
+      max-height: 400px;
     }
+
+    .header-parent-container {
+      max-height: 400px;
+      padding: 32px;
+
+      .register-tab {
+        width: 200px;
+
+        h2 {
+          font-size: 1.5rem;
+        }
+
+        p {
+          font-size: 1rem;
+        }
+
+        input {
+          height: 37px;
+          font-size: 0.9rem;
+        }
+
+        button {
+          font-size: 0.9rem;
+          height: 37px;
+        }
+      }
+
+      .fade-container {
+        left: 0;
+        bottom: 0;
+        position: absolute;
+        width: 100vw;
+        height: 100px;
+        background: linear-gradient(182deg, rgba(9, 9, 9, 0) 20.95%, #090909 98.41%);
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 1482px) {
-    header {
-    
-        img {
-            max-height: 600px;
-        }
-    
-        .header-parent-container {
-            max-height: 600px;
-            align-items: center;
-            justify-content: center;
-            padding: 64px;
-    
-            .register-tab {
-                width: 600px;
-                gap: 7px;
-                text-align: center;
-    
-                h2 {
-                   font-size: 3.4rem;
-                }
-    
-                p {
-                    font-size: 1.3rem;
-                }
-    
-                input {
-                    width: 250px;
-                    margin: 5px auto 15px auto;
-                }
-    
-                .header-register-link {
-                    width: 250px;
-                    margin: auto;
-                }
-            }
-    
-            .fade-container {
-                left: 0;
-                bottom: 0;
-                position: absolute;
-                width: 100vw;
-                height: 100px;
-                background: linear-gradient(182deg, rgba(9, 9, 9, 0.00) 20.95%, #090909 98.41%);
-            }
-        }
+  header {
+    img {
+      max-height: 600px;
     }
+
+    .header-parent-container {
+      max-height: 600px;
+      align-items: center;
+      justify-content: center;
+      padding: 64px;
+
+      .register-tab {
+        width: 600px;
+        gap: 7px;
+        text-align: center;
+
+        h2 {
+          font-size: 3.4rem;
+        }
+
+        p {
+          font-size: 1.3rem;
+        }
+
+        input {
+          width: 250px;
+          margin: 5px auto 15px auto;
+        }
+
+        .header-register-link {
+          width: 250px;
+          margin: auto;
+        }
+      }
+
+      .fade-container {
+        left: 0;
+        bottom: 0;
+        position: absolute;
+        width: 100vw;
+        height: 100px;
+        background: linear-gradient(182deg, rgba(9, 9, 9, 0) 20.95%, #090909 98.41%);
+      }
+    }
+  }
 }
