--- a/Client/src/assets/styling/components/_consumerMain.scss
+++ b/Client/src/assets/styling/components/_consumerMain.scss
@@ -2,315 +2,320 @@
 @use '../abstracts/fonts' as *;
 
 main {
-    overflow-x: hidden;
+  overflow-x: hidden;
 
-    .background-container {
-        width: 100vw;
-        background-color: $bg-main-90;
-        z-index: 1;
-        top: 0;
-        padding: 64px 16px;
+  .background-container {
+    width: 100vw;
+    background-color: $bg-main-90;
+    z-index: 1;
+    top: 0;
+    padding: 64px 16px;
 
-        .vertical-line {
-            width: 2px;
-            min-height: 100%;
-            background: linear-gradient(to bottom, #0d3ef100, #A80DF1);
-        }
-
-        .info-container {
-            display: flex;
-            flex-direction: column;
-            gap: 64px;
-
-            .step-container {
-                display: flex;
-                gap: 16px;
-
-                .text-child-containers {
-                    display: flex;
-                    flex-direction: column;
-                    gap: 64px;
-                }
-            }
-
-            h2 {
-                margin-bottom: 16px;
-                color: $text-main;
-                font-family: map-get($font-title-bold, font-family);
-                font-weight: map-get($font-title-bold, font-weight);
-            }
-
-            ul {
-                padding: 0 0 0 20px;
-            }
-
-            li {
-                color: $text-main;
-                font-family: map-get($font-text-light, font-family);
-                font-weight: map-get($font-text-light, font-weight);
-                margin-bottom: 8px;
-
-                span {
-                    font-family: map-get($font-title-bold, font-family);
-                    font-weight: map-get($font-title-bold, font-weight);
-                }
-            }
-
-
-            .text-container {
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-                align-items: start;
-
-                h2 {
-                    margin: 0;
-                }
-
-                p {
-                    color: $text-main;
-                    font-family: map-get($font-text-light, font-family);
-                    font-weight: map-get($font-text-light, font-weight);  
-                    margin-top: -5px;
-                }
-
-                .router-link {
-                    transition: all 0.2s ease-in-out;
-                    border: 2px solid $el-active-blue;
-                    padding: 6px 20px;
-                    border-radius: 20px;
-
-                    &:hover {
-                        transition: all 0.2s ease-in-out;
-                        background-color: $el-active-blue;
-                    }
-                }
-
-                a {
-                    color: $text-main;
-                    text-decoration: none;
-                    font-family: map-get($font-text-light, font-family);
-                    font-weight: map-get($font-text-light, font-weight);
-                }
-            }
-        }
+    .vertical-line {
+      width: 2px;
+      min-height: 100%;
+      background: linear-gradient(to bottom, #0d3ef100, #a80df1);
     }
 
-    .stressed-man-img {
-        margin-top: 16px;
-        max-width: 100vw;
-    }
+    .info-container {
+      display: flex;
+      flex-direction: column;
+      gap: 64px;
 
-    .promotion-container {
-        padding: 16px 16px 64px 16px;
+      .step-container {
+        display: flex;
+        gap: 16px;
+
+        .text-child-containers {
+          display: flex;
+          flex-direction: column;
+          gap: 64px;
+        }
+      }
+
+      h2 {
+        font-size: 1.4rem;
+        margin-bottom: 16px;
+        color: $text-main;
+        font-family: map-get($font-title-bold, font-family);
+        font-weight: map-get($font-title-bold, font-weight);
+      }
+
+      ul {
+        padding: 0 0 0 20px;
+      }
+
+      li {
+        font-size: 0.9rem;
+        color: $text-main;
+        font-family: map-get($font-text-light, font-family);
+        font-weight: map-get($font-text-light, font-weight);
+        margin-bottom: 8px;
+
+        span {
+          font-family: map-get($font-title-bold, font-family);
+          font-weight: map-get($font-title-bold, font-weight);
+        }
+      }
+
+      .text-container {
         display: flex;
         flex-direction: column;
-        gap: 24px;
-        
-        p {
-            color: $text-main;
-            font-family: map-get($font-title-bold, font-family);
-            font-weight: map-get($font-title-bold, font-weight);
-            margin-bottom: 8px;
-        } 
+        gap: 10px;
+        align-items: start;
 
-        .interactive {
-            display: flex;
-            flex-direction: column;
-
-            input {
-                transition: all 0.2s ease-in-out;
-                padding: 10px;
-                border: 2px solid $el-white-main; 
-                border-radius: 10px;
-                height: 35px;
-                background: transparent;
-                color: $text-main;
-    
-                &:focus {
-                    transition: all 0.2s ease-in-out;
-                    border: 2px solid $el-active-blue;
-                    outline: none;
-                }
-            }
-    
-            .main-register-btn {
-                transition: all 0.2s ease-in-out;
-                background-color: $el-active-blue;
-                border: none;
-                color: $text-main;
-                font-family: map-get($font-title-bold, font-family);
-                font-weight: map-get($font-title-bold, font-weight);
-                height: 35px;
-                border-radius: 50px;
-                margin-top: 16px;
-    
-                &:hover {
-                    transition: all 0.2s ease-in-out;
-                    cursor: pointer;
-                    background-color: $el-active-blue-hover;
-                }
-            }
+        h2 {
+          margin: 0;
         }
+
+        p {
+          font-size: 0.9rem;
+          color: $text-main;
+          font-family: map-get($font-text-light, font-family);
+          font-weight: map-get($font-text-light, font-weight);
+          margin-top: -5px;
+        }
+
+        .router-link {
+          transition: all 0.2s ease-in-out;
+          border: 2px solid $el-active-blue;
+          height: 35px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          padding: 0 16px;
+          border-radius: 20px;
+          font-size: 0.9rem;
+
+          &:hover {
+            transition: all 0.2s ease-in-out;
+            background-color: $el-active-blue;
+          }
+        }
+
+        a {
+          color: $text-main;
+          text-decoration: none;
+          font-family: map-get($font-text-light, font-family);
+          font-weight: map-get($font-text-light, font-weight);
+        }
+      }
     }
+  }
+
+  .stressed-man-img {
+    margin-top: 16px;
+    max-width: 100vw;
+  }
+
+  .promotion-container {
+    padding: 16px 16px 64px 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+    p {
+      font-size: 0.9rem;
+      color: $text-main;
+      font-family: map-get($font-text-light, font-family);
+      font-weight: map-get($font-text-light, font-weight);
+      margin-bottom: 8px;
+    }
+
+    .interactive {
+      display: flex;
+      flex-direction: column;
+
+      input {
+        transition: all 0.2s ease-in-out;
+        padding: 8px;
+        border: 2px solid $el-white-main;
+        border-radius: 10px;
+        height: 35px;
+        background: transparent;
+        color: $text-main;
+        font-size: 0.9rem;
+
+        &:focus {
+          transition: all 0.2s ease-in-out;
+          border: 2px solid $el-active-blue;
+          outline: none;
+        }
+      }
+
+      .main-register-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.2s ease-in-out;
+        background-color: $el-active-blue;
+        border: none;
+        color: $text-main;
+        font-family: map-get($font-title-bold, font-family);
+        font-weight: map-get($font-title-bold, font-weight);
+        height: 35px;
+        border-radius: 50px;
+        margin-top: 16px;
+        text-decoration: none;
+        font-size: 0.9rem;
+
+        &:hover {
+          transition: all 0.2s ease-in-out;
+          cursor: pointer;
+          background-color: $el-active-blue-hover;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 700px) {
-    main {
-    
-        .background-container {
-            padding: 32px;
-    
-            .vertical-line {
-                width: 1px;
-            }
-    
-            .info-container {
-    
-                .step-container {
-                    display: flex;
-                    gap: 16px;
-    
-                    .text-containers {
-                        gap: 70px;
-                    }
-                }
-    
-                h2 {
-                    font-size: 1.5rem;
-                }
-    
-                li {
-                    font-size: 1rem;
-                }
-    
-    
-                .text-container {
-    
-                    p {
-                        font-size: 1rem;
-                    }
-    
-                    a {
-                        font-size: 1rem;
-                    }
-                }
-            }
+  main {
+    .background-container {
+      padding: 32px;
+
+      .vertical-line {
+        width: 1px;
+      }
+
+      .info-container {
+        .step-container {
+          display: flex;
+          gap: 16px;
+
+          .text-containers {
+            gap: 70px;
+          }
         }
 
-        .stressed-man-img {
-            margin-top: 30px;
-            min-width: 100vw;
-            height: 550px;
-            object-fit: cover;
+        h2 {
+          font-size: 1.5rem;
         }
-    
-        .promotion-container {
-            padding: 32px 32px 64px 32px;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            max-width: 872px;
-            margin: auto;
 
-            .text {
-                margin-right: 15px;
-                width: 100%;
-            }
-
-            .interactive {
-                width: 100%;
-                max-width: 293px;
-                margin-left: 15px;
-            }
-            
-            p {
-                font-size: 1rem;
-            } 
-    
-            input {
-                width: 100%;
-                font-size: 0.9rem;
-            }
-    
-            button {
-                font-size: 0.9rem;
-                width: 100%;
-            }
+        li {
+          font-size: 1rem;
         }
-        
+
+        .text-container {
+          p {
+            font-size: 1rem;
+          }
+
+          a {
+            font-size: 1rem;
+          }
+        }
+      }
     }
+
+    .stressed-man-img {
+      margin-top: 30px;
+      min-width: 100vw;
+      height: 550px;
+      object-fit: cover;
+    }
+
+    .promotion-container {
+      padding: 32px 32px 64px 32px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      max-width: 872px;
+      margin: auto;
+
+      .text {
+        margin-right: 15px;
+        width: 100%;
+      }
+
+      .interactive {
+        width: 100%;
+        max-width: 293px;
+        margin-left: 15px;
+      }
+
+      p {
+        font-size: 1rem;
+      }
+
+      input {
+        width: 100%;
+        font-size: 0.9rem;
+      }
+
+      button {
+        font-size: 0.9rem;
+        width: 100%;
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 1482px) {
-    main {
-    
-        .background-container {
-            padding: 64px;
-    
-            .vertical-line {
-               display: none;
+  main {
+    .background-container {
+      padding: 64px;
+
+      .vertical-line {
+        display: none;
+      }
+
+      .info-container {
+        .top-container {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+
+          ul {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            gap: 90px;
+          }
+        }
+
+        .step-container {
+          margin-top: 128px;
+
+          .text-containers {
+            width: 100%;
+
+            .text-child-containers {
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              margin: auto;
+              gap: 100px;
+              margin: auto;
+              max-width: 1200px;
             }
-    
-            .info-container {
-
-                .top-container {
-                    
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-
-                    ul {
-                        display: flex;
-                        flex-direction: row;
-                        justify-content: space-between;
-                        gap: 90px;
-                    }
-                }
-    
-                .step-container {
-                    margin-top: 128px;
-
-                    .text-containers {
-                        width: 100%;
-
-                        .text-child-containers {
-                            display: flex;
-                            flex-direction: row;
-                            justify-content: space-between;
-                            margin: auto;
-                            gap: 100px;
-                            margin: auto;
-                            max-width: 1200px;
-                        }
-                    }
-                    
-                }
-
-                .text-container {
-                    width: 333px;
-    
-                    p {
-                        font-size: 1rem;
-                    }
-    
-                    a {
-                        font-size: 1rem;
-                    }
-                }
-    
-                h2 {
-                    font-size: 1.5rem;
-                }
-    
-                li {
-                    font-size: 1rem;
-                }
-            } 
+          }
         }
 
-        .promotion-container {
-            padding: 32px 64px 64px 64px;
+        .text-container {
+          width: 333px;
+
+          p {
+            font-size: 1rem;
+          }
+
+          a {
+            font-size: 1rem;
+          }
         }
+
+        h2 {
+          font-size: 1.5rem;
+        }
+
+        li {
+          font-size: 1rem;
+        }
+      }
     }
+
+    .promotion-container {
+      padding: 32px 64px 64px 64px;
+    }
+  }
 }
