--- a/Client/src/assets/styling/components/_consumerNav.scss
+++ b/Client/src/assets/styling/components/_consumerNav.scss
@@ -5,15 +5,21 @@
 
 nav {
   width: 100vw;
-  padding: 10px 16px;
   position: fixed;
   z-index: 2;
+
+  h1 {
+    color: $text-main;
+    font-family: map-get($font-title-black, font-family);
+    font-weight: map-get($font-title-black, font-weight);
+    font-size: 1.5rem;
+  }
 
   .nav-parent-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 10px;
+    padding: 8px 16px;
 
     .nav-child-container {
       width: 100%;
@@ -93,28 +99,24 @@ nav {
 
 @media screen and (min-width: 700px) {
   nav {
-    padding: 20px 32px;
+    h1 {
+      font-size: 1.7rem;
+    }
 
     .nav-parent-container {
-      .nav-child-container {
-        .nav-hamburger-icon {
-          button {
-            gap: 6px;
-          }
+      padding: 16px 32px;
 
-          span {
-            width: 30px;
-            height: 5px;
-            border-radius: 5px;
-            background-color: $el-white-main;
-          }
+      .left {
+        .router-link {
+          font-size: 1rem;
         }
       }
-    }
-  }
 
-  h1 {
-    font-size: 2.3rem;
+      .center {
+        display: flex;
+        justify-content: center;
+      }
+    }
   }
 }
 
@@ -124,7 +126,7 @@ nav {
 
     .nav-parent-container {
       transition: all 0.3s ease-in-out;
-      padding: 20px 32px;
+      padding: 16px 32px;
       .nav-child-container {
         .nav-hamburger-icon {
           button {
