[Redid] the styling for the signed in repair shops

--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -1,5 +1,6 @@
 @use './base.scss';
 
+@import './components/generalStyling';
 @import './components/consumerNav';
 @import './components/consumerHeader';
 @import './components/consumerMain';
