--- a/Client/src/assets/styling/components/_repairShopHomeForm.scss
+++ b/Client/src/assets/styling/components/_repairShopHomeForm.scss
@@ -1,268 +1,351 @@
 @use '../abstracts/colors' as *;
 @use '../abstracts/fonts' as *;
 
-.repair-shop-requests-form {
-  .customer-name {
-    color: $text-main;
-  }
+.repair-shop-home-parent {
+  padding: 16px;
 
-  .repair-shop-form-text-container {
-    position: relative;
-    transition: all 0.2s ease-in-out;
-    margin: 5px 0 10px 0;
-    width: 100%;
-    height: 42px;
-    background-color: $el-bg-gray;
-    color: $text-main;
-    border: 2px solid $el-border-gray;
-    padding: 8px;
-    border-radius: 10px;
-    z-index: 1;
-    display: flex;
-    justify-content: space-between;
-    color: $text-main;
-    font-family: map-get($font-text-light, font-family);
-    font-weight: map-get($font-text-light, font-weight);
-    align-items: center;
-
-    .show-more-btn {
-      background: transparent;
-      border: none;
+  .repair-shop-signed-in-header {
+    h2 {
+      font-size: 1.4rem;
       color: $text-main;
-      position: absolute;
-      left: 0;
-      top: 0;
-      height: 42px;
-      width: 100%;
-      text-align: right;
-      padding: 10px;
-
-      &:hover {
-        cursor: pointer;
-        color: $el-active-blue;
-      }
+      font-family: map-get($font-title-black, font-family);
+      font-weight: map-get($font-title-black, font-weight);
     }
   }
 
-  p,
-  span {
-    font-size: 0.9rem;
-  }
+  .repair-shop-signed-in-main {
+    margin-top: 16px;
 
-  hr {
-    margin: 8px 0;
-  }
-
-  span {
-    color: $text-main;
-    font-family: map-get($font-title-bold, font-family);
-    font-weight: map-get($font-title-bold, font-weight);
-  }
-
-  .repair-shop-form-text-container-extend {
-    position: relative;
-    transition: all 0.2s ease-in-out;
-    margin: 5px 0 10px 0;
-    width: 100%;
-    height: auto;
-    background-color: $el-bg-gray;
-    color: $text-main;
-    border: 2px solid $el-border-gray;
-    border-radius: 10px;
-    z-index: 1;
-    display: flex;
-    justify-content: space-between;
-    color: $text-main;
-    font-family: map-get($font-text-light, font-family);
-    font-weight: map-get($font-text-light, font-weight);
-    align-items: center;
-
-    .show-more-btn {
-      background: transparent;
-      border: none;
+    h3 {
+      font-size: 1.2rem;
       color: $text-main;
-      position: absolute;
-      left: 0;
-      top: 0;
-      height: 42px;
-      width: 100%;
-      text-align: right;
-
-      &:hover {
-        cursor: pointer;
-        color: $el-active-blue;
-      }
+      font-family: map-get($font-title-bold, font-family);
+      font-weight: map-get($font-title-bold, font-weight);
     }
 
-    .top-nav-extended {
-      padding: 8px;
-    }
+    .repair-shop-requests-form {
+      margin: 8px 0 32px 0;
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
 
-    .message-content {
-      padding: 8px;
-    }
+      .request-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
 
-    label {
-      padding: 8px;
-    }
+        .customer-name {
+          font-size: 0.9rem;
+          color: $text-main;
+          font-family: map-get($font-text-light, font-family);
+          font-weight: map-get($font-text-light, font-weight);
+        }
 
-    .answer-label {
-      color: $text-third;
-    }
+        .message-content-parent-container {
+          width: 100%;
+          margin-top: -14px;
+          border-radius: 15px;
+          border: 2px solid $el-border-gray;
+          padding: 8px 8px 0 8px;
 
-    .text-editor-answer {
-      width: 100%;
-      height: 300px;
-      padding: 8px;
-      margin-top: 8px;
-      color: $text-main;
-      border: none;
-      background: transparent;
-      resize: none;
-      font-size: 0.9rem;
-      font-family: map-get($font-text-light, font-family);
-      font-weight: map-get($font-text-light, font-weight);
+          .message-content-top-nav {
+            display: flex;
+            justify-content: space-between;
+            position: relative;
 
-      &:focus {
-        outline: none;
+            p,
+            span {
+              font-size: 0.9rem;
+              color: $text-main;
+              font-family: map-get($font-text-light, font-family);
+              font-weight: map-get($font-text-light, font-weight);
+            }
+
+            span {
+              font-family: map-get($font-title-bold, font-family);
+              font-weight: map-get($font-title-bold, font-weight);
+            }
+
+            .show-more-btn {
+              background: transparent;
+              border: none;
+              color: $text-main;
+              position: absolute;
+              border-bottom: 15px;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              text-align: right;
+
+              &:hover {
+                cursor: pointer;
+                color: $el-active-blue;
+              }
+            }
+          }
+
+          .message-content-text {
+            width: 100%;
+            margin-top: 8px;
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+
+            p {
+              font-size: 0.9rem;
+              color: $text-main;
+              font-family: map-get($font-text-light, font-family);
+              font-weight: map-get($font-text-light, font-weight);
+            }
+          }
+
+          .message-content-answer {
+            width: 100%;
+            margin-top: 8px;
+          }
+
+          .text-editor-answer {
+            width: 100%;
+            height: 300px;
+            color: $text-main;
+            border: none;
+            background: transparent;
+            resize: none;
+            font-size: 0.9rem;
+            font-family: map-get($font-text-light, font-family);
+            font-weight: map-get($font-text-light, font-weight);
+
+            &:focus {
+              outline: none;
+            }
+          }
+        }
+
+        .price-offer-input {
+          margin: 8px 0 16px 0;
+          width: 100%;
+          height: 42px;
+          background-color: $el-bg-gray;
+          font-size: 0.9rem;
+          color: $text-main;
+          font-family: map-get($font-text-light, font-family);
+          font-weight: map-get($font-text-light, font-weight);
+          border: 2px solid $el-border-gray;
+          padding: 10px;
+          border-radius: 10px;
+          z-index: 1;
+          margin-top: -14px;
+
+          &:focus {
+            transition: all 0.2s ease-in-out;
+            outline: none;
+            border: 2px solid transparent;
+            border-radius: 10px;
+            background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
+              linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
+            background-origin: border-box;
+            background-clip: padding-box, border-box;
+          }
+        }
+
+        .repair-shop-home-send-btn-disabled {
+          transition: all 0.2s ease-in-out;
+          background-color: $el-inactive-blue;
+          border: none;
+          color: $text-disabled;
+          font-family: map-get($font-title-bold, font-family);
+          font-weight: map-get($font-title-bold, font-weight);
+          font-size: 0.9rem;
+          height: 42px;
+          border-radius: 50px;
+          width: 100%;
+        }
+
+        .repair-shop-home-send-btn {
+          transition: all 0.2s ease-in-out;
+          background-color: $el-active-blue;
+          border: none;
+          color: $text-main;
+          font-family: map-get($font-title-bold, font-family);
+          font-weight: map-get($font-title-bold, font-weight);
+          font-size: 0.9rem;
+          height: 42px;
+          border-radius: 50px;
+          width: 100%;
+
+          &:hover {
+            transition: all 0.2s ease-in-out;
+            cursor: pointer;
+            background-color: $el-active-blue-hover;
+          }
+        }
       }
     }
   }
 }
 
-@media screen and (min-width: 700px) {
-  .repair-shop-requests-form {
-    display: flex;
-    gap: 32px;
-    padding: 0;
-    margin-bottom: 32px;
+@media screen and (min-width: 600px) {
+  .repair-shop-home-parent {
+    padding: 16px;
+    max-width: 1200px;
+    margin: auto;
 
-    .content-container-parent {
-      width: 100%;
-
-      .customer-name {
+    .repair-shop-signed-in-header {
+      h2 {
+        font-size: 1.4rem;
         color: $text-main;
+        font-family: map-get($font-title-black, font-family);
+        font-weight: map-get($font-title-black, font-weight);
       }
+    }
 
-      .repair-shop-form-text-container {
-        position: relative;
-        transition: all 0.2s ease-in-out;
-        margin: 5px 0 10px 0;
-        width: 100%;
-        height: 42px;
-        background-color: $el-bg-gray;
-        color: $text-main;
-        border: 2px solid $el-border-gray;
-        padding: 8px;
-        border-radius: 10px;
-        z-index: 1;
-        display: flex;
-        justify-content: space-between;
-        color: $text-main;
-        font-family: map-get($font-text-light, font-family);
-        font-weight: map-get($font-text-light, font-weight);
-        align-items: center;
+    .repair-shop-signed-in-main {
+      margin-top: 16px;
 
-        .show-more-btn {
-          background: transparent;
-          border: none;
-          color: $text-main;
-          position: absolute;
-          left: 0;
-          top: 0;
-          height: 42px;
-          width: 100%;
-          text-align: right;
-          padding: 10px;
-
-          &:hover {
-            cursor: pointer;
-            color: $el-active-blue;
-          }
-        }
-      }
-
-      p,
-      span {
-        font-size: 0.9rem;
-      }
-
-      hr {
-        margin: 8px 0;
-      }
-
-      span {
+      h3 {
+        font-size: 1.2rem;
         color: $text-main;
         font-family: map-get($font-title-bold, font-family);
         font-weight: map-get($font-title-bold, font-weight);
       }
 
-      .repair-shop-form-text-container-extend {
-        position: relative;
-        transition: all 0.2s ease-in-out;
-        margin: 5px 0 10px 0;
-        width: 100%;
-        height: auto;
-        background-color: $el-bg-gray;
-        color: $text-main;
-        border: 2px solid $el-border-gray;
-        border-radius: 10px;
-        z-index: 1;
+      .repair-shop-requests-form {
+        margin: 8px 0 32px 0;
         display: flex;
-        justify-content: space-between;
-        color: $text-main;
-        font-family: map-get($font-text-light, font-family);
-        font-weight: map-get($font-text-light, font-weight);
-        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 32px;
 
-        .show-more-btn {
-          background: transparent;
-          border: none;
-          color: $text-main;
-          position: absolute;
-          left: 0;
-          top: 0;
-          height: 42px;
-          width: 100%;
-          text-align: right;
+        .request-container {
+          max-width: calc(50% - 16px);
+          display: flex;
+          flex-direction: column;
+          gap: 16px;
 
-          &:hover {
-            cursor: pointer;
-            color: $el-active-blue;
+          .customer-name {
+            font-size: 0.9rem;
+            color: $text-main;
+            font-family: map-get($font-text-light, font-family);
+            font-weight: map-get($font-text-light, font-weight);
           }
-        }
 
-        .top-nav-extended {
-          padding: 8px;
-        }
+          .message-content-parent-container {
+            width: 100%;
+            margin-top: -14px;
+            border-radius: 15px;
+            border: 2px solid $el-border-gray;
+            padding: 8px;
 
-        .message-content {
-          padding: 8px;
-        }
+            .message-content-top-nav {
+              display: flex;
+              justify-content: space-between;
+              position: relative;
 
-        label {
-          padding: 8px;
-        }
+              .show-more-btn {
+                background: transparent;
+                border: none;
+                color: $text-main;
+                position: absolute;
+                border-bottom: 15px;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                text-align: right;
 
-        .answer-label {
-          color: $text-third;
-        }
+                &:hover {
+                  cursor: pointer;
+                  color: $el-active-blue;
+                }
+              }
+            }
 
-        .text-editor-answer {
-          width: 100%;
-          height: 300px;
-          padding: 8px;
-          margin-top: 8px;
-          color: $text-main;
-          border: none;
-          background: transparent;
-          resize: none;
-          font-size: 0.9rem;
-          font-family: map-get($font-text-light, font-family);
-          font-weight: map-get($font-text-light, font-weight);
+            .message-content-text {
+              width: 100%;
+              margin-top: 8px;
+              display: flex;
+              flex-direction: column;
+              gap: 4px;
+            }
 
-          &:focus {
-            outline: none;
+            .message-content-answer {
+              width: 100%;
+              margin-top: 8px;
+            }
+
+            .text-editor-answer {
+              width: 100%;
+              height: 300px;
+              color: $text-main;
+              border: none;
+              background: transparent;
+              resize: none;
+              font-size: 0.9rem;
+              font-family: map-get($font-text-light, font-family);
+              font-weight: map-get($font-text-light, font-weight);
+
+              &:focus {
+                outline: none;
+              }
+            }
+          }
+
+          .price-offer-input {
+            margin: 8px 0 16px 0;
+            width: 100%;
+            height: 42px;
+            background-color: $el-bg-gray;
+            color: $text-main;
+            border: 2px solid $el-border-gray;
+            padding: 10px;
+            border-radius: 10px;
+            z-index: 1;
+            margin-top: -14px;
+
+            &:focus {
+              transition: all 0.2s ease-in-out;
+              outline: none;
+              border: 2px solid transparent;
+              border-radius: 10px;
+              background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
+                linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
+              background-origin: border-box;
+              background-clip: padding-box, border-box;
+            }
+          }
+
+          .repair-shop-home-send-btn-disabled {
+            transition: all 0.2s ease-in-out;
+            background-color: $el-inactive-blue;
+            border: none;
+            color: $text-disabled;
+            font-family: map-get($font-title-bold, font-family);
+            font-weight: map-get($font-title-bold, font-weight);
+            font-size: 0.9rem;
+            height: 42px;
+            border-radius: 50px;
+            width: 100%;
+          }
+
+          .repair-shop-home-send-btn {
+            transition: all 0.2s ease-in-out;
+            background-color: $el-active-blue;
+            border: none;
+            color: $text-main;
+            font-family: map-get($font-title-bold, font-family);
+            font-weight: map-get($font-title-bold, font-weight);
+            font-size: 0.9rem;
+            height: 42px;
+            border-radius: 50px;
+            width: 100%;
+
+            &:hover {
+              transition: all 0.2s ease-in-out;
+              cursor: pointer;
+              background-color: $el-active-blue-hover;
+            }
           }
         }
       }
