[Added] a new array to remove answered messages for the repair shop who has answered to that message. Next step is to create a new route to store that in a secure way

--- a/Client/src/assets/styling/components/_repairShopHomeForm.scss
+++ b/Client/src/assets/styling/components/_repairShopHomeForm.scss
@@ -236,7 +236,7 @@
             margin-top: -14px;
             border-radius: 15px;
             border: 2px solid $el-border-gray;
-            padding: 8px;
+            padding: 8px 8px 0 8px;
 
             .message-content-top-nav {
               display: flex;
