--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -14,6 +14,6 @@
 @import './components/userHome';
 @import './components/repairShopHomeForm';
 
-@import './components/dialog';
+@import './components/magicTokenDialog';
 @import './components/messageDialog';
 @import './components/blueLine';
