[Added] logic for 'normal' users to retrieve the answers from the repair shops

--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -13,6 +13,8 @@
 @import './components/signInDialog';
 @import './components/userHome';
 @import './components/repairShopHomeForm';
+@import './components/bottomNav';
+@import './components/userSent';
 
 @import './components/magicTokenDialog';
 @import './components/messageDialog';
