[Added] a side nav for signed in users which will be displayed from 900px in width

--- a/Client/src/assets/styling/components/_repairShopHomeForm.scss
+++ b/Client/src/assets/styling/components/_repairShopHomeForm.scss
@@ -21,6 +21,7 @@
       color: $text-main;
       font-family: map-get($font-title-bold, font-family);
       font-weight: map-get($font-title-bold, font-weight);
+      margin-bottom: 16px;
     }
 
     .repair-shop-requests-form {
