--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -15,6 +15,7 @@
 @import './components/repairShopHomeForm';
 @import './components/bottomNav';
 @import './components/userSent';
+@import './components/sideNav';
 
 @import './components/magicTokenDialog';
 @import './components/messageDialog';
