[Added] a FAQ section as well as a visual graph to better motivate repair shops to create an account

--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -16,6 +16,7 @@
 @import './components/bottomNav';
 @import './components/userSent';
 @import './components/sideNav';
+@import './components/_faq';
 
 @import './components/magicTokenDialog';
 @import './components/messageDialog';
