--- a/Client/src/assets/styling/components/_consumerMain.scss
+++ b/Client/src/assets/styling/components/_consumerMain.scss
@@ -103,16 +103,63 @@ main {
     }
   }
 
-  .stressed-man-img {
-    margin-top: 16px;
-    max-width: 100vw;
+  .graph-parent-container {
+    padding: 16px 16px 64px 16px;
+
+    .graph-container {
+      margin-top: 24px;
+      display: flex;
+      align-items: baseline;
+      gap: 7%;
+
+      .graph {
+        width: 100%;
+        border: 2px solid transparent;
+        border-radius: 8px;
+        background-image: linear-gradient($bg-main, $bg-main),
+          linear-gradient(to bottom, rgb(13, 63, 241), rgba(13, 62, 241, 0));
+        background-origin: border-box;
+        background-clip: padding-box, border-box;
+        border-radius: 8px 8px 0 0;
+      }
+
+      .graph-1 {
+        height: 48px;
+      }
+
+      .graph-2 {
+        height: 80px;
+      }
+
+      .graph-3 {
+        height: 112px;
+      }
+
+      .graph-4 {
+        height: 144px;
+      }
+
+      .graph-5 {
+        height: 176px;
+      }
+    }
   }
 
-  .promotion-container {
+  .faq-container {
     padding: 16px 16px 64px 16px;
     display: flex;
     flex-direction: column;
     gap: 24px;
+    max-width: 1200px;
+    margin: auto;
+
+    h3 {
+      font-size: 0.9rem;
+      color: $text-main;
+      font-family: map-get($font-title-bold, font-family);
+      font-weight: map-get($font-title-bold, font-weight);
+      margin-bottom: 8px;
+    }
 
     p {
       font-size: 0.9rem;
@@ -121,53 +168,38 @@ main {
       font-weight: map-get($font-text-light, font-weight);
       margin-bottom: 8px;
     }
-
-    .interactive {
-      display: flex;
-      flex-direction: column;
-
-      input {
-        transition: all 0.2s ease-in-out;
-        padding: 8px;
-        border: 2px solid $el-white-main;
-        border-radius: 10px;
-        height: 35px;
-        background: transparent;
-        color: $text-main;
-        font-size: 0.9rem;
-
-        &:focus {
-          transition: all 0.2s ease-in-out;
-          border: 2px solid $el-active-blue;
-          outline: none;
-        }
-      }
-
-      .main-register-btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: all 0.2s ease-in-out;
-        background-color: $el-active-blue;
-        border: none;
-        color: $text-main;
-        font-family: map-get($font-title-bold, font-family);
-        font-weight: map-get($font-title-bold, font-weight);
-        height: 35px;
-        border-radius: 50px;
-        margin-top: 16px;
-        text-decoration: none;
-        font-size: 0.9rem;
-
-        &:hover {
-          transition: all 0.2s ease-in-out;
-          cursor: pointer;
-          background-color: $el-active-blue-hover;
-        }
-      }
-    }
   }
 }
+
+// @media screen and (min-width: 400px) {
+//   main {
+//     .graph-parent-container {
+//       .graph-container {
+//         gap: 24px;
+//       }
+//     }
+//   }
+// }
+
+// @media screen and (min-width: 500px) {
+//   main {
+//     .graph-parent-container {
+//       .graph-container {
+//         gap: 32px;
+//       }
+//     }
+//   }
+// }
+
+// @media screen and (min-width: 600px) {
+//   main {
+//     .graph-parent-container {
+//       .graph-container {
+//         gap: 40px;
+//       }
+//     }
+//   }
+// }
 
 @media screen and (min-width: 700px) {
   main {
@@ -208,20 +240,38 @@ main {
       }
     }
 
-    .stressed-man-img {
-      margin-top: 30px;
-      min-width: 100vw;
-      height: 550px;
-      object-fit: cover;
+    .graph-parent-container {
+      padding: 32px 32px 64px 32px;
+      max-width: 900px;
+      margin: auto;
+
+      .graph-container {
+        gap: 8%;
+
+        .graph-1 {
+          height: 80px;
+        }
+
+        .graph-2 {
+          height: 144px;
+        }
+
+        .graph-3 {
+          height: 208px;
+        }
+
+        .graph-4 {
+          height: 272px;
+        }
+
+        .graph-5 {
+          height: 336px;
+        }
+      }
     }
 
-    .promotion-container {
+    .faq-container {
       padding: 32px 32px 64px 32px;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      max-width: 872px;
-      margin: auto;
 
       .text {
         margin-right: 15px;
@@ -246,6 +296,16 @@ main {
       button {
         font-size: 0.9rem;
         width: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 900px) {
+  main {
+    .graph-parent-container {
+      .graph-container {
+        gap: 9%;
       }
     }
   }
@@ -314,7 +374,7 @@ main {
       }
     }
 
-    .promotion-container {
+    .faq-container {
       padding: 32px 64px 64px 64px;
     }
   }
