--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -17,6 +17,7 @@
 @import './components/userSent';
 @import './components/sideNav';
 @import './components/_faq';
+@import './components/_contactForm';
 
 @import './components/magicTokenDialog';
 @import './components/messageDialog';
